force-app/main/default/objects/Anonymization_Sobject__c/Anonymization_Sobject__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Anonymization Sobject</label>
</CustomObject>