force-app/main/default/objects/Anonymization_Sobject__c/fields/sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Name__c</fullName>
    <label>sObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>